[package]
name = "smooth-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", default-features=false, features=["png", "jpeg"] }
clap = { version = "4.0.29", default-features=false, features=["std", "help", "usage", "derive"] }
nalgebra = "0.31.4"
rand = { version = "0.8.5", default-features=false, features=["small_rng", "getrandom"] }
tabled = "0.10.0"
nalgebra-sparse = "0.8.0"
humantime = "2.1.0"
accelerate-blas-sys = { git="https://github.com/Congyuwang/accelerate-blas-sys", tag="v0.1.0" }

[profile.release]
lto = true
